# Hospital-Management-System-with-SQL

./: README.md  pyproject.toml
Code/: HMS_App.py  about.py  admin.py  admin_add_doctors.py  admin_doctors.py  admin_edit_doctors.py  admin_feedback.py  admin_main.py  admin_profile.py  admin_profile_update.py  app_main.py  constants.py  contact_us.py  doctor_pat_hist.py  doctor_profile.py  doctor_profile_update.py  emp.py  emp_main.py  emp_signup.py  facility.py  feedback.py  pat_signup.py  patient.py  patient_activity.py  patient_main.py  patient_profile.py  patient_profile_update.py
hmsdb/: hmsdb_admin.sql  hmsdb_admin_details.sql  hmsdb_doc_details.sql  hmsdb_employee.sql  hmsdb_feedback.sql  hmsdb_pat_activity.sql  hmsdb_pat_details.sql  hmsdb_patient.sql
